# boids

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
include/: boid.hpp  boid_simulation.hpp  canvas.hpp  cell.hpp  grid.hpp  resource.hpp
src/: boid.cpp  boid_simulation.cpp  boid_simulation.hpp  canvas.cpp  cell.cpp  grid.cpp  main.cpp  resource.cpp
